--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 16 21:27:39 MST 2024
-sdk.dir=C\:\\Users\\ErzaT\\AppData\\Local\\Android\\Sdk
+#Sun Nov 17 00:38:20 MST 2024
+sdk.dir=C\:\\Users\\hoori\\AppData\\Local\\Android\\Sdk
