--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,19 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Root-level build.gradle file
+
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.6.1'
-        classpath 'com.google.gms:google-services:4.4.0' // Add this line for Google Services
-
+        classpath 'com.android.tools.build:gradle:8.6.1'  // Use the correct version of AGP
+        classpath 'com.google.gms:google-services:4.4.0'  // Firebase plugin if needed
     }
 }
 
 allprojects {
     repositories {
-        google()
+        google()  // Repositories for Android dependencies
         mavenCentral()
     }
 }
-
